--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <div class="col-4">
       <form class="form">
         <legend id="forms" class="headline-secondary">Form Elements</legend>
-        <img class="img-avatar" src="../images/avatar.png" alt="Avatar">
+        <img class="img-avatar" src="./images/avatar.png" alt="Avatar">
         <label class="hidden" for="username">Username:</label>
         <input class="input" type="text" id="username" placeholder="Username">
         <label class="hidden" for="password">Password:</label>
@@ -72,10 +72,10 @@
 
   <div class="row">
     <div class="col-6">
-      <img class="img img-frame" src="../images/image.png" alt="sample image">
+      <img class="img img-frame" src="./images/image.png" alt="sample image">
     </div>
     <div class="col-6">
-      <img class="img img-avatar" src="../images/avatar.png" alt="Avatar">
+      <img class="img img-avatar" src="./images/avatar.png" alt="Avatar">
     </div>
   </div>
 
